# datasette-llm-usage

./: README.md  datasette.yml  pyproject.toml
.github/workflows/: publish.yml
datasette_llm_usage/: __init__.py  db.py  migrations.py  pricing.py
datasette_llm_usage/templates/: llm_usage_credits.html  llm_usage_simple_prompt.html  llm_usage_single_prompt.html
tests/: conftest.py  test_credits.py  test_llm_usage.py
