[project]
name = "datasette-llm-usage"
version = "0.1a2"
description = "Track usage of LLM tokens in a SQLite table"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a21",
    "datasette-llm",
    "sqlite-migrate"
]

[build-system]
requires = ["uv_build>=0.9.18,<0.12.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/datasette/datasette-llm-usage"
Changelog = "https://github.com/datasette/datasette-llm-usage/releases"
Issues = "https://github.com/datasette/datasette-llm-usage/issues"
CI = "https://github.com/datasette/datasette-llm-usage/actions"

[project.entry-points.datasette]
llm_usage = "datasette_llm_usage"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "llm-echo>=0.3"]

[tool.uv.sources]
datasette-llm = { path = "/Users/simon/dev/scratch/datasette-llm" }
llm-echo = { path = "/Users/simon/dev/scratch/llm-echo" }

[tool.uv.build-backend]
module-root = ""

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
